--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
       line-height: 1.6em;
       padding: 0 1em;
       margin-top: 1.2em;
+      text-align: left;
     }
 
     footer {
@@ -230,7 +231,7 @@
     </div>
     <h2>Understand AI → Build Real-World Solutions → Lead the Future</h2>
     <div class="pill-bar">
-      Self-Paced Learning | Hands-On Projects | Expert Mentoring
+      1 hour course! Beginner Friendly | Hands-On Projects
     </div>
   </header>
 
@@ -254,7 +255,12 @@
     <div class="arrow-up">↑↑↑↑</div>
     <div class="access-message">Watch Video for Enrollment details</div>
     <p class="video-message">
-      From theory to practice: build chatbots, vision systems, and AI tools you can deploy today.
+      🔍 What you’ll explore:<br>
+      • What AI really is (and what it isn’t)<br>
+      • How AI is shaping industries and everyday life<br>
+      • Real-world examples and use cases<br>
+      • Ethical questions and responsible AI<br>
+      • Hands-on mini projects to bring your learning to life
     </p>
   </main>
 
@@ -275,7 +281,7 @@
 
     function onYouTubeIframeAPIReady() {
       player = new YT.Player('player', {
-        host: 'https://www.youtube-nocookie.com',
+        host: 'https://www.youtube.com-nocookie.com',
         videoId: 'YOUR_AI_VIDEO_ID',
         playerVars: {
           controls: 0, disablekb: 1, fs: 0,
@@ -315,3 +321,4 @@
   </script>
 </body>
 </html>
+```
