--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       font-size: 0.95em;
       color: #fff;
       margin-top: 0.6em;
+      white-space: nowrap; /* prevent wrapping on mobile */
     }
 
     main {
@@ -229,9 +230,9 @@
       <span>Artificial Intelligence.</span>
       <span>Made Easy.</span>
     </div>
-    <h2>Understand AI → Build Real-World Solutions → Lead the Future</h2>
+    <h2>Understand AI → Using AI For Productivity → Build Real-World Solutions</h2>
     <div class="pill-bar">
-      1 hour course! Beginner Friendly | Hands-On Projects
+      1 hour | Beginner Friendly | Hands-On Projects
     </div>
   </header>
 
@@ -255,12 +256,13 @@
     <div class="arrow-up">↑↑↑↑</div>
     <div class="access-message">Watch Video for Enrollment details</div>
     <p class="video-message">
-      🔍 What you’ll explore:<br>
+      What the course covers:<br>
       • What AI really is (and what it isn’t)<br>
       • How AI is shaping industries and everyday life<br>
       • Real-world examples and use cases<br>
       • Ethical questions and responsible AI<br>
-      • Hands-on mini projects to bring your learning to life
+      • Hands-on mini projects to bring your learning to life<br>
+      • 1 Hour beginner friendly course.
     </p>
   </main>
 
@@ -281,7 +283,7 @@
 
     function onYouTubeIframeAPIReady() {
       player = new YT.Player('player', {
-        host: 'https://www.youtube.com-nocookie.com',
+        host: 'https://www.youtube-nocookie.com',
         videoId: 'YOUR_AI_VIDEO_ID',
         playerVars: {
           controls: 0, disablekb: 1, fs: 0,
